--- a/compose/docker-es01.yml
+++ b/compose/docker-es01.yml
@@ -4,7 +4,7 @@
     hostname: "es01.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik:
-      default:
+      # default:
       # local network:
       intnet:
         aliases:
