--- a/compose/docker-logstash.yml
+++ b/compose/docker-logstash.yml
@@ -13,7 +13,7 @@
     hostname: "logstash.${APP_HOST}.${INT_NETWORK}"
     networks:
      # for traefik:
-      default:
+      # default:
       # local network:
       intnet:
         aliases:
