--- a/compose/docker-kibana.yml
+++ b/compose/docker-kibana.yml
@@ -46,9 +46,9 @@
       - "traefik.http.routers.kibana-public.rule=Host(`${KIBANA_HOST}`)"
       - "traefik.http.routers.kibana-public.entrypoints=https"
       - "traefik.http.routers.kibana-public.tls=true"
-      - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
-      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
-      - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
+      # - "traefik.http.routers.kibana-public.middlewares=kibana-${APP_ID}@docker"
+      # - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.scheme=https"
+      # - "traefik.http.middlewares.kibana-${APP_ID}.redirectscheme.port=5601"
       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.port=5601"
       - "traefik.http.services.kibana-${APP_ID}.loadbalancer.server.scheme=https"
     ulimits:
