--- a/extras/kibana/kibana.yml
+++ b/extras/kibana/kibana.yml
@@ -26,6 +26,7 @@ monitoring:
       username: "${ELASTICSEARCH_USERNAME}"
       password: "${ELASTICSEARCH_PASSWORD}"
       ssl.certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+      ssl.verification_mode: "${VERIFICATION_MODE}"
       requestTimeout: 240000
   kibana.collection.enabled: false
 
@@ -37,6 +38,7 @@ elasticsearch:
   username: "${ELASTICSEARCH_USERNAME}"
   password: "${ELASTICSEARCH_PASSWORD}"
   ssl.certificateAuthorities: ["${ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES}"]
+   ssl.verification_mode: "${VERIFICATION_MODE}"
   requestTimeout: 240000
 
 xpack:
