--- a/compose/docker-apm.yml
+++ b/compose/docker-apm.yml
@@ -13,7 +13,7 @@
     hostname: "apm-server.${APP_HOST}.${INT_NETWORK}"
     networks:
       # for traefik
-      # default:
+      default:
       # local network:
       intnet:
         ipv4_address: ${ES_NET}.10
@@ -41,8 +41,8 @@
       - ES_NET=${ES_NET}
       - STAGE=${STAGE}
       - VERIFICATION_MODE=${VERIFICATION_MODE}        
-#     labels:
-#       - "traefik.enable=true"
+    labels:
+      - "traefik.enable=false"
 #       - "traefik.docker.network=${DOCKER_NETWORK}"
 #       - "traefik.http.routers.apm-server-public.rule=Host(`apm-server.${APP_HOST}.${INT_NETWORK}`)"
 #       - "traefik.http.routers.apm-server-public.service=apm-server-${APP_ID}"
