--- a/extras/apm-server/apm-server.yml
+++ b/extras/apm-server/apm-server.yml
@@ -3,7 +3,7 @@
 ################################ APM Server ################################
 
 apm-server:
-  host: "${ES_NET}.10"
+  host: "0.0.0.0"
 
   #---------------------------- APM Server - RUM Real User Monitoring ----------------------------
 
